Added two new pages. Blog and About. Also linked the three pages to one another.

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -12,10 +12,14 @@
 	</head>
 	<body>
 
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-        <a href="/blog">Blog</a>
-		
-		<h1>Astro Site</h1>
+
+		<h1>Blog</h1>
+        <h2>Yap sesh</h2>
+
+        <p>I am working through my yap addiction</p>
+
+        <p>Plz help</p>
 	</body>
 </html>
