--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,22 @@
 ---
+import "../styles/global.css";
 
-const pageTitle = "Homepage"
-
+const pageTitle = "Homepage";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog">Blog</a>
 
-		<a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog">Blog</a>
-
-		<h1>Astro Site</h1>
-	</body>
+    <h1>Astro Site</h1>
+  </body>
 </html>
